# rudolfjs.github.io

./: .gitignore  .gitmodules  CHANGELOG.md  CNAME  LICENSE  README.md  example.typ  hugo.toml  mobile-pdf.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  references.bib  social.toml
.changes/: v1.0.0.md  v1.1.0.md  v2.0.0.md  v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.0.3.md  v3.1.0.md  v3.2.0.md  v3.3.0.md  v3.4.1.md
.changes/unreleased/: Added-20241007-090826.yaml  Added-20241007-090833.yaml  Added-20241007-090957.yaml  Added-20241020-192316.yaml  Added-20241020-192322.yaml  Added-20250830-094505.yaml  Added-20250831-211926.yaml  Added-20250908-115710.yaml  Added-20250923-075000.yaml  Added-20250929-130247.yaml  Added-20250929-130255.yaml  Added-20250930-072149.yaml  Added-20250930-182748.yaml  Added-20250930-182758.yaml  Added-20250930-190005.yaml  Added-20251001-082427.yaml  Added-20251230-153248.yaml  Added-20260414-083355.yaml  Added-20260414-083359.yaml  Changed-20250316-210630.yaml  Changed-20250316-210640.yaml  Changed-20250316-210652.yaml  Changed-20250830-101350.yaml  Changed-20250830-104434.yaml  Changed-20250830-105934.yaml  Changed-20250830-110127.yaml  Changed-20250831-094453.yaml  (+10 more)
archetypes/: blog.md  default.md  notes.md  projects.md  publications.md
content/: _index.md
plos-latex-template/: plos_latex_template.tex
public/: 404.html  index.html  index.xml  sitemap.xml
scripts/: fnv32a.py  render-typst.sh  xkcd_sine.py
tests/: code-highlighting.spec.js
zapping-zero/: package-lock.json  package.json  tailwind.config.js
(+106 files in other folders)
