[project]
authors = [{name = "Rudolf J Schnetler", email = "r.schnetler@uq.edu.au"}]
dependencies = []
name = "rudolfjs.github.io"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rudolfjs_github_io = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.7,<3.14"
matplotlib = ">=3.10.6,<4"
numpy = ">=2.3.3,<3"
duckdb = ">=1.3.2,<2"
pyarrow = ">=21.0.0,<22"
